azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "vmPrefix": {
      "type": "string",
      "defaultValue": "concourse",
      "metadata": {
        "description": "Name of the vm, will be used as DNS Name for the Public IP used to access the Virtual Machine"
      }
    },
    "ubuntuOSVersion": {
      "type": "string",
      "defaultValue": "18.04-LTS",
      "allowedValues": [
        "14.04.05-LTS",
        "16.04-LTS",
        "18.04-LTS"
      ],
      "metadata": {
        "description": "User name for the Virtual Machine"
      }
    },
    "adminUsername": {
      "type": "string",
      "defaultValue": "ubuntu",
      "metadata": {
        "description": "User name for the Virtual Machine"
      }
    },
    "sshKeyData": {
      "type": "string",
      "metadata": {
        "description": "Please copy the content of your SSH RSA public key and paste it here. You can use \"ssh-keygen -t rsa -b 2048\" to generate your SSH key pairs."
      }
    },
    "concourseUsername": {
      "type": "string",
      "defaultValue": "concourse",
      "metadata": {
        "description": "Login username for Concourse web portal or Fly CLI"
      }
    },
    "concoursePassword": {
      "type": "securestring",
      "metadata": {
        "description": "Login password for Concourse web portal or Fly CLI"
      }
    },
    "concourseWorkerDiskSize": {
      "type": "int",
      "defaultValue": 30,
      "minValue": 30,
      "maxValue": 1023,
      "metadata": {
        "description": "Disk size of Concourse worker instance in GB, value must be between 30GB to 1023GB"
      }
    },
    "environment": {
      "type": "string",
      "defaultValue": "AzureStack",
      "allowedValues": [
        "AzureStack"
      ],
      "metadata": {
        "description": "Different environments in Azure. Only AzureStack is supported for now"
      }
    },
    "servicePrincipalType": {
      "type": "string",
      "defaultValue": "Password",
      "allowedValues": [
        "Password",
        "Certificate"
      ],
      "metadata": {
        "description": "Service principal supports two types: with a password or with a certificate"
      }
    },
    "tenantID": {
      "type": "string",
      "minLength": 36,
      "maxLength": 36,
      "metadata": {
        "description": "ID of the tenant. See https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/guidance.md"
      }
    },
    "clientID": {
      "type": "string",
      "minLength": 36,
      "maxLength": 36,
      "metadata": {
        "description": "ID of the client. See https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/guidance.md"
      }
    },
    "clientSecret": {
      "type": "securestring",
      "metadata": {
        "description": "secret of the client. See https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/blob/master/docs/guidance.md"
      }
    },
    "boshVmSize": {
      "type": "string",
      "defaultValue": "Standard_F4s_v2",
      "metadata": {
        "description": "Please check if the region support this VM size https://azure.microsoft.com/en-us/regions/#services. For more information about virtual machine sizes, see https://azure.microsoft.com/en-us/documentation/articles/virtual-machines-linux-sizes/"
      }
    },
    "stemcellOSVersion": {
      "type": "string",
      "defaultValue": "Xenial",
      "allowedValues": [
        "Trusty",
        "Xenial"
      ],
      "metadata": {
        "description": "The OS version of stemcell when deploying Cloud Foundry"
      }
    },
    "autoDeployBosh": {
      "type": "string",
      "defaultValue": "disabled",
      "allowedValues": [
        "enabled",
        "disabled"
      ],
      "metadata": {
        "description": "The flag allowing to deploy Bosh automatically or not"
      }
    },
    "autoDeployConcourse": {
      "type": "string",
      "defaultValue": "disabled",
      "allowedValues": [
        "enabled",
        "disabled"
      ],
      "metadata": {
        "description": "The flag allowing to deploy Concourse automatically or not"
      }
    },
    "_artifactsLocation": {
      "type": "string",
      "defaultValue": "https://raw.githubusercontent.com/bottkars/azurestack-concourse-pcf/master/",
      "metadata": {
        "description": "The base URI where artifacts required by this template are located. When the template is deployed using the accompanying scripts, a private location in the subscription will be used and this value will be automatically generated."
      }
    },
    "azureStackDomain": {
      "type": "string",
      "defaultValue": "azurestack.external",
      "metadata": {
        "description": "Azure Stack deployment domain. Please check https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/tree/master/docs/advanced/azure-stack."
      }
    },
    "azureStackResource": {
      "type": "string",
      "defaultValue": "NotApplicableIfEnvironmentIsNotAzureStack",
      "metadata": {
        "description": "Azure Stack Active Directory Service Endpoint Resource ID. Please check https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/tree/master/docs/advanced/azure-stack."
      }
    },
    "azureStackAuthentication": {
      "type": "string",
      "defaultValue": "AzureAD",
      "allowedValues": [
        "AzureAD"
      ],
      "metadata": {
        "description": "Azure Stack Authentication. Please check https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/tree/master/docs/advanced/azure-stack."
      }
    },
    "azureStackCARootCertificate": {
      "type": "string",
      "defaultValue": "",
      "metadata": {
        "description": "Azure Stack CA root certificate, which is base64 encoded. Get the Azure Stack CA root certificate from the Azure Stack operator, run \"cat <PATH_TO_YOUR_PEM_CERTIFICATE> | base64 -w 0\", and input the result. If not provided, \"/var/lib/waagent/Certificates.pem\" will be used. Please check https://github.com/cloudfoundry-incubator/bosh-azure-cpi-release/tree/master/docs/advanced/azure-stack#azure-stack-properties."
      }
    },
    "stemcellOSVersion": {
      "type": "string",
      "defaultValue": "Xenial",
      "allowedValues": [
        "Trusty",
        "Xenial"
      ],
      "metadata": {
        "description": "The OS version of stemcell when deploying Cloud Foundry"
      }
    },
    "useAvailabilityZones": {
      "type": "string",
      "defaultValue": "disabled",
      "allowedValues": [
        "enabled",
        "disabled"
      ],
      "metadata": {
        "description": "The flag to enable availability zones in cloud config"
      }
    },
    "boshLogLevel": {
      "type": "string",
      "defaultValue": "debug",
      "allowedValues": [
        "debug",
        "info",
        "warn",
        "error",
        "none"
      ],
      "metadata": {
        "description": "The log level for Bosh"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {
    "OSDiskName": "osdisk",
    "defaultStorageAccountName": "[concat('concourse', uniqueString(resourceGroup().id))]",
    "storageAccountType": "Standard_LRS",
    "vmStorageAccountContainerName": "vhds",
    "storageid": "[resourceId('Microsoft.Storage/storageAccounts', variables('defaultStorageAccountName'))]",
    "virtualNetworkName": "vnet",
    "virtualNetworkAddressSpace": "10.20.0.0/16",
    "vnetID": "[resourceId('Microsoft.Network/virtualNetworks', variables('virtualNetworkName'))]",
    "subnetNameForBosh": "Bosh",
    "subnetAddressRangeForBosh": "10.20.0.0/24",
    "subnetGatewayForBosh": "10.20.0.1",
    "internalIPForBosh": "10.20.0.4",
    "subnetRefForBosh": "[concat(variables('vnetID'), '/subnets/', variables('subnetNameForBosh'))]",
    "subnetNameForConcourse": "Concourse",
    "subnetAddressRangeForConcourse": "10.20.16.0/20",
    "subnetGatewayForConcourse": "10.20.16.1",
    "jumpboxNetworkSecurityGroup": "nsg-jumpbox",
    "boshNetworkSecurityGroup": "nsg-bosh",
    "concourseNetworkSecurityGroup": "nsg-concourse",
    "vmSize": "Standard_D1",
    "nicName": "[concat(parameters('vmPrefix'),'-jumpbox')]",
    "jumpboxPrivateIPAddress": "10.20.0.100",
    "imagePublisher": "Canonical",
    "imageOffer": "UbuntuServer",
    "sshKeyPath": "[concat('/home/', parameters('adminUsername'), '/.ssh/authorized_keys')]",
    "baseUriAzureStack": "[parameters('_artifactsLocation')]",
    "filesToDownloadAzureStack": [
      "[uri(variables('baseUriAzureStack'), 'scripts/setup_env.sh')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/bosh.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/cloud.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/concourse.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/concourse-xenial.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/versions.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/cpi.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/custom-cpi-release.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/custom-environment.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/use-azure-dns.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/use-managed-disks.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/jumpbox-user.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/keep-failed-or-unreachable-vms.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/azure-stack-properties.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/use-xenial-stemcell.yml')]",
      "[uri(variables('baseUriAzureStack'), 'manifests/use-compiled-releases-xenial-stemcell.yml')]"
    ],
    "filesToDownload": "[variables(concat('filesToDownload', parameters('environment')))]",
    "stemcellUrlAzure": "[variables(concat('stemcellUrlAzure', parameters('stemcellOSVersion')))]",
    "stemcellSha1Azure": "[variables(concat('stemcellSha1Azure', parameters('stemcellOSVersion')))]",
    "stemcellReleaseAzure": "[variables(concat('stemcellReleaseAzure', parameters('stemcellOSVersion')))]",
    "stemcellUrlAzureTrusty": "https://bosh.io/d/stemcells/bosh-azure-hyperv-ubuntu-trusty-go_agent?v=3586.48",
    "stemcellSha1AzureTrusty": "a8d223388dcd55997a137697dd371f14caebe00d",
    "stemcellReleaseAzureTrusty": "3586.48",
    "stemcellUrlAzureXenial": "https://bosh.io/d/stemcells/bosh-azure-hyperv-ubuntu-xenial-go_agent?v28",
    "stemcellSha1AzureXenial": "623f2616b9adb429419860fc353321f66256cdb5",
    "stemcellReleaseAzureXenial": "97.28",
    "environmentAzureStack": {
      "serviceHostBase": "[parameters('azureStackDomain')]",
      "boshCliUrl": "https://github.com/cloudfoundry/bosh-cli/releases/download/v5.3.1/bosh-cli-5.3.1-linux-amd64",
      "boshAzureCPIReleaseUrl": "https://bosh.io/d/github.com/cloudfoundry-incubator/bosh-azure-cpi-release?v=35.4.0",
      "boshAzureCPIReleaseSha1": "372c0220e2e38ca9201135eccb52ff912f2d0538"
    },
    "environment": "[variables(concat('environment', parameters('environment')))]",
    "keepUnreachableVMs": "false"
  },
  "resources": [
    {
      "type": "Microsoft.Storage/storageAccounts",
      "name": "[variables('defaultStorageAccountName')]",
      "apiVersion": "2015-06-15",
      "location": "[parameters('location')]",
      "properties": {
        "accountType": "[variables('storageAccountType')]"
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('boshNetworkSecurityGroup')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "ssh",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "bosh-agent",
            "properties": {
              "description": "Allow bosh-agent",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6868",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "bosh-director",
            "properties": {
              "description": "Allow bosh-director",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "25555",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 202,
              "direction": "Inbound"
            }
          },
          {
            "name": "dns",
            "properties": {
              "description": "Allow DNS",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "53",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 203,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('jumpboxNetworkSecurityGroup')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "ssh",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[variables('concourseNetworkSecurityGroup')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "concourse-https",
            "properties": {
              "description": "Allow HTTPS",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 200,
              "direction": "Inbound"
            }
          },
          {
            "name": "concourse-ssh",
            "properties": {
              "description": "Allow SSH",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 201,
              "direction": "Inbound"
            }
          },
          {
            "name": "concourse-http",
            "properties": {
              "description": "Allow HTTP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 202,
              "direction": "Inbound"
            }
          },
          {
            "name": "concourse-atc",
            "properties": {
              "description": "Allow Concourse ATC",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "8080",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 203,
              "direction": "Inbound"
            }
          },
          {
            "name": "concourse-tsa",
            "properties": {
              "description": "Allow Concourse TSA",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "2222",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 204,
              "direction": "Inbound"
            }
          },
          {
            "name": "concourse-garden",
            "properties": {
              "description": "Allow Concourse Garden",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "7777",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 205,
              "direction": "Inbound"
            }
          },
          {
            "name": "concourse-baggageclaim",
            "properties": {
              "description": "Allow Concourse Baggageclaim",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "7788",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 206,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2015-06-15",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(parameters('vmPrefix'),'-jumpbox')]",
      "location": "[parameters('location')]",
      "properties": {
        "publicIPAllocationMethod": "Dynamic",
        "dnsSettings": {
          "domainNameLabel": "[toLower(concat(parameters('vmPrefix'),'-jumpbox'))]"
        }
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/publicIPAddresses",
      "name": "[concat(parameters('vmPrefix'), '-concourse')]",
      "location": "[parameters('location')]",
      "properties": {
        "publicIPAllocationMethod": "Static",
        "dnsSettings": {
          "domainNameLabel": "[toLower(concat(parameters('vmPrefix'),'-concourse'))]"
        }
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[variables('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[variables('virtualNetworkAddressSpace')]"
          ]
        },
        "subnets": [
          {
            "name": "[variables('subnetNameForBosh')]",
            "properties": {
              "addressPrefix": "[variables('subnetAddressRangeForBosh')]"
            }
          },
          {
            "name": "[variables('subnetNameForConcourse')]",
            "properties": {
              "addressPrefix": "[variables('subnetAddressRangeForConcourse')]"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2017-10-01",
      "type": "Microsoft.Network/networkInterfaces",
      "name": "[variables('nicName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Network/publicIPAddresses/', concat(parameters('vmPrefix'), '-jumpbox'))]",
        "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
        "[concat('Microsoft.Network/networkSecurityGroups/', variables('jumpboxNetworkSecurityGroup'))]"
      ],
      "properties": {
        "networkSecurityGroup": {
          "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('jumpboxNetworkSecurityGroup'))]"
        },
        "ipConfigurations": [
          {
            "name": "ipconfig1",
            "properties": {
              "privateIPAllocationMethod": "Static",
              "privateIPAddress": "[variables('jumpboxPrivateIPAddress')]",
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('vmPrefix'), '-jumpbox'))]"
              },
              "subnet": {
                "id": "[variables('subnetRefForBosh')]"
              }
            }
          }
        ]
      }
    },
    {
      "name": "generate-customdata",
      "type": "Microsoft.Resources/deployments",
      "apiVersion": "2015-01-01",
      "dependsOn": [
        "[concat('Microsoft.Storage/storageAccounts/', variables('defaultStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "mode": "Incremental",
        "templateLink": {
          "uri": "[concat(variables('baseUriAzureStack'), 'generate-customdata.json')]",
          "contentVersion": "1.0.0.0"
        },
        "parameters": {
          "customData": {
            "value": {
              "VNET_NAME": "[variables('virtualNetworkName')]",
              "LOG_LEVEL_FOR_BOSH": "[parameters('boshLogLevel')]",
              "SUBNET_NAME_FOR_BOSH": "[variables('subnetNameForBosh')]",
              "SUBNET_ADDRESS_RANGE_FOR_BOSH": "[variables('subnetAddressRangeForBosh')]",
              "BOSH_VM_SIZE": "[parameters('boshVmSize')]",
              "SUBNET_GATEWAY_FOR_BOSH": "[variables('subnetGatewayForBosh')]",
              "INTERNAL_IP_FOR_BOSH": "[variables('internalIPForBosh')]",
              "SUBNET_NAME_FOR_CONCOURSE": "[variables('subnetNameForConcourse')]",
              "SUBNET_ADDRESS_RANGE_FOR_CONCOURSE": "[variables('subnetAddressRangeForConcourse')]",
              "SUBNET_GATEWAY_FOR_CONCOURSE": "[variables('subnetgatewayForConcourse')]",
              "CONCOURSE_PUBLIC_IP": "[reference(concat(parameters('vmPrefix'),'-concourse')).ipAddress]",
              "CONCOURSE_FQDN": "[reference(concat(parameters('vmPrefix'), '-concourse')).dnsSettings.fqdn]",
              "NSG_NAME_FOR_BOSH": "[variables('boshNetworkSecurityGroup')]",
              "NSG_NAME_FOR_CONCOURSE": "[variables('concourseNetworkSecurityGroup')]",
              "SUBSCRIPTION_ID": "[subscription().subscriptionId]",
              "RESOURCE_GROUP_NAME": "[resourceGroup().name]",
              "DEFAULT_STORAGE_ACCOUNT_NAME": "[variables('defaultStorageAccountName')]",
              "STORAGE_ACCESS_KEY": "[listKeys(variables('storageid'), '2015-06-15').key1]",
              "ADMIN_USER_NAME": "[parameters('adminUsername')]",
              "ENVIRONMENT": "[parameters('environment')]",
              "SERVICE_HOST_BASE": "[variables('environment').serviceHostBase]",
              "BOSH_AZURE_CPI_RELEASE_URL": "[variables('environment').boshAzureCPIReleaseUrl]",
              "BOSH_AZURE_CPI_RELEASE_SHA1": "[variables('environment').boshAzureCPIReleaseSha1]",
              "STEMCELL_URL": "[variables('stemcellUrlAzure')]",
              "STEMCELL_SHA1": "[variables('stemcellSha1Azure')]",
              "STEMCELL_RELEASE": "[variables('stemcellReleaseAzure')]",
              "BOSH_CLI_URL": "[variables('environment').boshCLIUrl]",
              "KEEP_UNREACHABLE_VMS": "[variables('keepUnreachableVMs')]",
              "AUTO_DEPLOY_BOSH": "[parameters('autoDeployBosh')]",
              "AUTO_DEPLOY_CONCOURSE": "[parameters('autoDeployConcourse')]",
              "CONCOURSE_USERNAME": "[parameters('concourseUsername')]",
              "CONCOURSE_PASSWORD": "[parameters('concoursePassword')]",
              "CONCOURSE_WORKER_DISK_SIZE": "[parameters('concourseWorkerDiskSize')]",
              "AZURE_STACK_DOMAIN": "[parameters('azureStackDomain')]",
              "AZURE_STACK_RESOURCE": "[parameters('azureStackResource')]",
              "AZURE_STACK_AUTHENTICATION": "[parameters('azureStackAuthentication')]",
              "AZURE_STACK_CA_ROOT_CERTIFICATE": "[parameters('azureStackCARootCertificate')]",
              "SERVICE_PRINCIPAL_TYPE": "[parameters('servicePrincipalType')]",
              "USE_AVAILABILITY_ZONES": "[parameters('useAvailabilityZones')]"
            }
          }
        }
      }
    },
    {
      "apiVersion": "2017-03-30",
      "type": "Microsoft.Compute/virtualMachines",
      "name": "[concat(parameters('vmPrefix'),'-jumpbox')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "Microsoft.Resources/deployments/generate-customdata",
        "[concat('Microsoft.Storage/storageAccounts/', variables('defaultStorageAccountName'))]",
        "[concat('Microsoft.Network/networkInterfaces/', variables('nicName'))]"
      ],
      "properties": {
        "hardwareProfile": {
          "vmSize": "[variables('vmSize')]"
        },
        "osProfile": {
          "computerName": "[concat(parameters('vmPrefix'),'-jumpbox')]",
          "adminUsername": "[parameters('adminUsername')]",
          "linuxConfiguration": {
            "disablePasswordAuthentication": true,
            "ssh": {
              "publicKeys": [
                {
                  "path": "[variables('sshKeyPath')]",
                  "keyData": "[parameters('sshKeyData')]"
                }
              ]
            }
          },
          "customData": "[reference('Microsoft.Resources/deployments/generate-customdata', '2015-01-01').outputs.customData.value]"
        },
        "storageProfile": {
          "imageReference": {
            "publisher": "[variables('imagePublisher')]",
            "offer": "[variables('imageOffer')]",
            "sku": "[parameters('ubuntuOSVersion')]",
            "version": "latest"
          },
          "osDisk": {
            "managedDisk": {
              "storageAccountType": "Standard_LRS"
            },
            "caching": "ReadWrite",
            "createOption": "FromImage"
          }
        },
        "networkProfile": {
          "networkInterfaces": [
            {
              "id": "[resourceId('Microsoft.Network/networkInterfaces', variables('nicName'))]"
            }
          ]
        }
      }
    },
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(parameters('vmPrefix'),'-jumpbox','/resetpassword')]",
      "apiVersion": "2017-03-30",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', parameters('vmPrefix'),'-jumpbox')]"
      ],
      "properties": {
          "publisher": "Microsoft.OSTCExtensions",
          "type": "VMAccessForLinux",
          "typeHandlerVersion": "1.4",
          "autoUpgradeMinorVersion": true,
          "settings": {},
          "protectedSettings": {
              "username": "[parameters('adminusername')]",
              "ssh_key": "[parameters('sshKeyData')]"
          }
      }
    },  
    {
      "type": "Microsoft.Compute/virtualMachines/extensions",
      "name": "[concat(parameters('vmPrefix'),'-jumpbox','/initvm')]",
      "apiVersion": "2017-03-30",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[concat('Microsoft.Compute/virtualMachines/', parameters('vmPrefix'),'-jumpbox')]",
        "[concat('Microsoft.Compute/virtualMachines/', parameters('vmPrefix'),'-jumpbox','/extensions/resetpassword')]"
      ],
      "properties": {
        "publisher": "Microsoft.Azure.Extensions",
        "type": "CustomScript",
        "typeHandlerVersion": "2.0",
        "autoUpgradeMinorVersion": true,
        "settings": {
          "fileUris": "[variables('filesToDownload')]",
          "timestamp": 4
        },
        "protectedSettings": {
          "commandToExecute": "[concat('bash -l -c \"./setup_env.sh', ' ', parameters('tenantID'), ' ', parameters('clientID'), ' ', parameters('clientSecret'), ' 2>&1 | tee /home/', parameters('adminUsername'), '/install.log\"')]"
        }
      }
    }
  ],
  "outputs": {
    "sshjumpbox": {
      "type": "string",
      "value": "[concat('ssh ', parameters('adminUsername'), '@', reference(concat('Microsoft.Network/publicIPAddresses/', parameters('vmPrefix'), '-jumpbox')).dnsSettings.fqdn)]"
    },
    "concourseEndpoint": {
      "type": "string",
      "value": "[concat('http://', reference(concat(parameters('vmPrefix'), '-concourse')).ipAddress, ':8080')]"
    }
  }
}
